Finished The Header and PB Section. Added base content. | Update #2 |

--- a/index.html
+++ b/index.html
@@ -17,6 +17,53 @@
     </head>
     <body>
 
+         <!-- HEADER STARTS -->
+         <header class="header">
+
+            <!-- HEADER LOGO SETUP -->
+            <div class="header__logo-box">
+               <!-- <img src="resources/images/logo-white.png" alt="Eco-Globe Logo" class="header__logo"> -->
+            </div>
+
+            <!-- HEADER VIDEO SETUP -->
+            <div class="header__video">
+                <video autoplay muted loop id="bg-video__content">
+                    <source src="resources/images/bg-video.mp4" type="video/mp4">
+                    <source src="resources/images/bg-video.webm" type="video/webm">
+                </video>
+            </div>
+
+            <!-- HEADER TEXT AND BUTTON SETUP -->
+            <div class="header__text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary--main">Welcome To Tech Hub</span>
+                    <span class="heading-primary--sub">Tech Nowadays</span>
+                </h1>
+
+                <!-- BUTTON SETUP -->
+                <a href="#" class="btn btn--white btn--animated-1">Explore</a>
+            </div>
+        </header>
+        <!-- HEADER ENDS -->
+
+        <!-- MAIN CONTENT STARTS -->
+        <main>
+        <!-- SECTION POWERED BY STARTS -->
+        <section class="section-pb">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary section-pb__heading">Powered By </h2>
+                <div class="section-pb__logo-box">
+                    <img class="section-pb__logo" src="resources/images/logo-2.png" alt="Nvidia Logo">
+                </div>
+            </div>
+        </section>
+        <!-- SECTION POWERED BY ENDS -->
+
+        <!-- SECTION FEATURES STARTS -->
+        <section class="section-features">
+
+        </section> 
+        <!-- SECTION FEATURES ENDS -->
 
 
 
@@ -28,11 +75,9 @@
 
 
 
+    </main>
+    <!-- MAIN CONTENT ENDS -->
 
-
-
-
-        
     </body>
 
 </html>
