Started working on Features section. | Update #3 |

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
         <title>Tech Hub</title>
     </head>
     <body>
-
          <!-- HEADER STARTS -->
          <header class="header">
-
             <!-- HEADER LOGO SETUP -->
             <div class="header__logo-box">
                <!-- <img src="resources/images/logo-white.png" alt="Eco-Globe Logo" class="header__logo"> -->
             </div>
-
             <!-- HEADER VIDEO SETUP -->
             <div class="header__video">
                 <video autoplay muted loop id="bg-video__content">
@@ -32,14 +29,12 @@
                     <source src="resources/images/bg-video.webm" type="video/webm">
                 </video>
             </div>
-
             <!-- HEADER TEXT AND BUTTON SETUP -->
             <div class="header__text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">Welcome To Tech Hub</span>
                     <span class="heading-primary--sub">Tech Nowadays</span>
                 </h1>
-
                 <!-- BUTTON SETUP -->
                 <a href="#" class="btn btn--white btn--animated-1">Explore</a>
             </div>
@@ -61,7 +56,120 @@
 
         <!-- SECTION FEATURES STARTS -->
         <section class="section-features">
+            <div class="u-center-text u-margin-bottom-big heading-one">
+                <h2 class="heading-secondary section-features__heading">Services</h2>
+            </div>
 
+            <div class="row">
+
+            <!-- FEATURE BOX 1 -->
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-bolt"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">REAL-TIME RAY TRACING IN GAMES</h3>
+                    <p class="feature-box__text">
+                        Renewable Energy is way more important than we think. Most commonly used renewable energy sources are Solar, Wind, Hydropower and Geothermal. 
+                        Solar energy is already being used in homes. While new investors with “making energy from moving air” in their mind are showing up constantly.
+                    </p>
+                </div>
+            </div>
+
+            <!-- FEATURE BOX 2 -->
+            <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">POWERFUL AI-ENHANCED GRAPHICS</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+            <!-- FEATURE BOX 3 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">ADVANCED SHADING TECHNOLOGIES</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+            <!-- FEATURE BOX 4 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">THE ULTIMATE GAMING DISPLAYS</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+              <!-- FEATURE BOX 5 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">ULTIMATE PERFORMANCE</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+            <!-- FEATURE BOX 6 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">G-SYNC ADVANTAGES</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+            <!-- FEATURE BOX 7 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">CERTIFIED BY NVIDIA</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+            <!-- FEATURE BOX 8 -->
+              <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-trashcan-remove"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small feature-box__heading">SHOP NOW</h3>
+                        <p class="feature-box__text">
+                                While leading pollutant entering the oceans is sewage, plastic is a serious issue as well. Over a 90% of plastics are not recycled. 
+                                Corporate giants producing products made from plastic such as Coca-Cola, Pepsi, Starbucks, McDonald’s are already looking forward for 
+                                producing and delivering goods in a way that respects oceans and this planet.
+                        </p>
+                    </div>
+            </div>
+
+        </div>
+            
         </section> 
         <!-- SECTION FEATURES ENDS -->
 
