Added New Pictures. Started working on Games Section. | Update #5 |

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- HEADER TEXT AND BUTTON SETUP -->
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">Welcome To N-Tech Hub</span>
+                    <span class="heading-primary--main">Welcome To Tech Hub</span>
                     <span class="heading-primary--sub">Tech Nowadays</span>
                 </h1>
                 <!-- BUTTON SETUP -->
@@ -122,7 +122,14 @@
 
         <!-- SECTION GAMES STARTS -->
         <section class="section-games">
-            
+            <h2 class="heading-secondary u-margin-top-medium section-games__heading">Battlefield Will never be the same</h2>
+            <p class="paragraph section-games__paragraph">
+                Battling in the global war, no two victories are ever alike. Stay and fight together to triumph in an epic, infinite, all-out war. Experience World War 2 as you’ve 
+                never seen it before in BattlefieldTM V with the unparalleled realism and performance of GeForce RTX graphics cards. The all-new NVIDIA Turing™ architecture with RTX 
+                makes this the ultimate PC platform for Battlefield V.
+            </p>
+             <!-- "PRE-ORDER" BUTTON -->
+             <a href="#" class="btn-text u-margin-top-medium section-games__button">Pre Order Now &rarr;</a>
         </section>
 
 
