Started working on Game Section 2. Added Shadow Of The Tomb Raider.  | Update #6 |

--- a/index.html
+++ b/index.html
@@ -120,17 +120,37 @@
         </section>
         <!-- FEATURES SECTION ENDS | SECTION 4 -->
 
-        <!-- SECTION GAMES STARTS -->
-        <section class="section-games">
-            <h2 class="heading-secondary u-margin-top-medium section-games__heading">Battlefield Will never be the same</h2>
-            <p class="paragraph section-games__paragraph">
+        <!-- SECTION GAME 1 STARTS -->
+        <section class="section-game-1">
+            <h2 class="heading-secondary u-margin-top-medium section-game-1__heading">Battlefield Will never be the same</h2>
+            <p class="paragraph section-game-1__paragraph">
                 Battling in the global war, no two victories are ever alike. Stay and fight together to triumph in an epic, infinite, all-out war. Experience World War 2 as you’ve 
                 never seen it before in BattlefieldTM V with the unparalleled realism and performance of GeForce RTX graphics cards. The all-new NVIDIA Turing™ architecture with RTX 
                 makes this the ultimate PC platform for Battlefield V.
             </p>
              <!-- "PRE-ORDER" BUTTON -->
-             <a href="#" class="btn-text u-margin-top-medium section-games__button">Pre Order Now &rarr;</a>
+             <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
         </section>
+        <!-- SECTION GAME 1 ENDS -->
+
+        <!-- SECTION GAME 2 STARTS -->
+        <section class="section-game-2">
+            <div class="section-game-2__container">
+            <h2 class="heading-secondary u-margin-top-medium section-game-2__heading">Become The tomb raider</h2>
+            <p class="paragraph section-game-2__paragraph">
+                Experience Lara Croft’s defining moment in ​Shadow of the Tomb Raider​™ with the ultimate performance of GeForce RTX graphics cards 
+                and lifelike visuals powered by RTX. Enjoy unparalleled realism with real-time ray tracing in Shadow of the Tomb Raider powered 
+                by GeForce RTX.
+            </p>
+             <!-- "PRE-ORDER" BUTTON -->
+             <a href="#" class="btn-text u-margin-top-medium section-game-1__button">&larr; Pre Order Now</a>
+            </div>
+        </section>
+        <!-- SECTION GAME 2 ENDS -->
+
+        <!-- SECTION GAME 3 STARTS -->
+
+        <!-- SECTION GAME 3 ENDS -->
 
 
 
