Added Third Game section. Added Queries. Ready for improvements. | Update #7 |

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <!-- META / SEO SETUP -->
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Tech-Hub is the website that provides all needed info's and news related to tech.">
 
         <!-- LINKS / FILES -->
@@ -57,7 +57,9 @@
         <!-- FEATURES SECTION STARTS | SECTION 1 -->
         <section class="section-container-1">
             <div class="row">
+                <div class="col-1-of-2">
                 <div class="section-container-1__text">
+                   <i class="section-container-1__icon icon-basic-eye"></i>
                    <h3 class="heading-tertiary u-margin-top-medium u-margin-bottom-small section-container-header">REAL-TIME RAY TRACING IN GAMES</h3>
                    <p class="paragraph section-container-1__paragraph-1">
                         Ray tracing is the definitive solution for lifelike lighting, reflections, and shadows, offering a level of realism far beyond what’s possible using 
@@ -67,13 +69,16 @@
                    <a href="#" class="btn-text section-container-1__button-1 u-margin-top-medium">Read More &rarr;</a>
                </div>
             </div>
+        </div>
         </section>
         <!-- FEATURES SECTION ENDS | SECTION 1 -->
 
         <!-- FEATURES SECTION STARTS | SECTION 2 -->
         <section class="section-container-2">
             <div class="row">
+                <div class="col-1-of-2">
                 <div class="section-container-2__text">
+                   <i class="section-container-2__icon icon-basic-mixer2"></i>
                    <h3 class="heading-tertiary u-margin-top-medium u-margin-bottom-small section-container-header">POWERFUL AI-ENHANCED GRAPHICS</h3>
                    <p class="paragraph section-container-2__paragraph-2">
                         Artificial intelligence is driving the greatest technology advancement in history, and Turing is bringing it to computer graphics. Armed with Tensor Cores 
@@ -84,13 +89,16 @@
                    <a href="#" class="btn-text section-container-2__button-2 u-margin-top-medium">Read More &rarr;</a>
                </div>
             </div>
+        </div>
         </section>
         <!-- FEATURES SECTION ENDS | SECTION 2 -->
 
         <!-- FEATURES SECTION STARTS | SECTION 3 -->
          <section class="section-container-3">
             <div class="row">
+                <div class="col-1-of-2">
                 <div class="section-container-3__text">
+                   <i class="section-container-3__icon icon-basic-gear"></i>
                    <h3 class="heading-tertiary u-margin-top-medium u-margin-bottom-small section-container-header">NEW ADVANCED SHADING TECHNOLOGIES</h3>
                    <p class="paragraph section-container-3__paragraph-3">
                         Programmable shaders defined modern graphics. Turing GPUs feature new advanced shading technologies that are more powerful, flexible, and efficient than ever before. 
@@ -100,13 +108,16 @@
                    <a href="#" class="btn-text section-container-3__button-3 u-margin-top-medium">Read More &rarr;</a>
                </div>
             </div>
+        </div>
         </section>
         <!-- FEATURES SECTION ENDS | SECTION 3 -->
 
         <!-- FEATURES SECTION STARTS | SECTION 4 -->
         <section class="section-container-4">
             <div class="row">
+                <div class="col-1-of-2">
                 <div class="section-container-4__text">
+                   <i class="section-container-4__icon icon-basic-bolt"></i>
                    <h3 class="heading-tertiary u-margin-top-medium u-margin-bottom-small section-container-header">ULTIMATE PERFORMANCE</h3>
                    <p class="paragraph section-container-4__paragraph-4">
                         Variable overdrive also eliminates ghosting artifacts by predicting the next frame and adjusting the parameters of the LCD overdrive.  
@@ -117,39 +128,52 @@
                    <a href="#" class="btn-text section-container-4__button-4 u-margin-top-medium">Read More &rarr;</a>
                </div>
             </div>
+        </div>
         </section>
         <!-- FEATURES SECTION ENDS | SECTION 4 -->
 
         <!-- SECTION GAME 1 STARTS -->
         <section class="section-game-1">
-            <h2 class="heading-secondary u-margin-top-medium section-game-1__heading">Battlefield Will never be the same</h2>
-            <p class="paragraph section-game-1__paragraph">
-                Battling in the global war, no two victories are ever alike. Stay and fight together to triumph in an epic, infinite, all-out war. Experience World War 2 as you’ve 
-                never seen it before in BattlefieldTM V with the unparalleled realism and performance of GeForce RTX graphics cards. The all-new NVIDIA Turing™ architecture with RTX 
-                makes this the ultimate PC platform for Battlefield V.
-            </p>
-             <!-- "PRE-ORDER" BUTTON -->
-             <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
+            <div class="section-game-1__container">
+                <h2 class="heading-secondary u-margin-top-medium section-game-1__heading">Battlefield Will never be the same</h2>
+                <p class="paragraph section-game-1__paragraph">
+                    Battling in the global war, no two victories are ever alike. Stay and fight together to triumph in an epic, infinite, all-out war. Experience World War 2 as you’ve 
+                    never seen it before in BattlefieldTM V with the unparalleled realism and performance of GeForce RTX graphics cards. The all-new NVIDIA Turing™ architecture with RTX 
+                    makes this the ultimate PC platform for Battlefield V.
+                </p>
+                <!-- "PRE-ORDER" BUTTON -->
+                <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
+            </div>
         </section>
         <!-- SECTION GAME 1 ENDS -->
 
         <!-- SECTION GAME 2 STARTS -->
         <section class="section-game-2">
             <div class="section-game-2__container">
-            <h2 class="heading-secondary u-margin-top-medium section-game-2__heading">Become The tomb raider</h2>
-            <p class="paragraph section-game-2__paragraph">
-                Experience Lara Croft’s defining moment in ​Shadow of the Tomb Raider​™ with the ultimate performance of GeForce RTX graphics cards 
-                and lifelike visuals powered by RTX. Enjoy unparalleled realism with real-time ray tracing in Shadow of the Tomb Raider powered 
-                by GeForce RTX.
-            </p>
-             <!-- "PRE-ORDER" BUTTON -->
-             <a href="#" class="btn-text u-margin-top-medium section-game-1__button">&larr; Pre Order Now</a>
+                <h2 class="heading-secondary u-margin-top-medium section-game-2__heading">Become The tomb raider</h2>
+                <p class="paragraph section-game-2__paragraph">
+                    Experience Lara Croft’s defining moment in ​Shadow of the Tomb Raider​™ with the ultimate performance of GeForce RTX graphics cards 
+                    and lifelike visuals powered by RTX. Enjoy unparalleled realism with real-time ray tracing in Shadow of the Tomb Raider powered 
+                    by GeForce RTX.
+                </p>
+                <!-- "PRE-ORDER" BUTTON -->
+                <a href="#" class="btn-text u-margin-top-medium section-game-1__button">&larr; Pre Order Now</a>
             </div>
         </section>
         <!-- SECTION GAME 2 ENDS -->
 
         <!-- SECTION GAME 3 STARTS -->
-
+            <section class="section-game-3">
+                <div class="section-game-3__container">
+                    <h2 class="heading-secondary u-margin-top-medium section-game-3__heading">Flee The shattered ruins of Moscow in metro exodus</h2>
+                    <p class="paragraph section-game-3__paragraph">
+                        Survive an epic journey across post-apocalyptic Russia with the unbeatable power and performance of the revolutionary new GeForce RTX graphics cards. 
+                        Immerse yourself in the stark and frightening post-apocalyptic world of Metro Exodus brought to life with the stunning realism of RTX.
+                    </p>
+                    <!-- "PRE-ORDER" BUTTON -->
+                    <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
+                </div>
+            </section>
         <!-- SECTION GAME 3 ENDS -->
 
 
