Added Products Section. Ready For Improvements. | Update #8 |

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <title>Nvidia Tech Hub</title>
     </head>
     <body>
-         <!-- HEADER STARTS -->
+         <!-- ** HEADER STARTS ** -->
          <header class="header">
             <!-- HEADER LOGO SETUP -->
             <div class="header__logo-box">
@@ -39,10 +39,11 @@
                 <a href="#" class="btn btn--white btn--animated-1">Explore</a>
             </div>
         </header>
-        <!-- HEADER ENDS -->
+        <!-- ** HEADER ENDS ** -->
 
         <!-- MAIN CONTENT STARTS -->
         <main>
+
         <!-- SECTION POWERED BY STARTS -->
         <section class="section-pb">
             <div class="u-center-text u-margin-bottom-big">
@@ -176,16 +177,51 @@
             </section>
         <!-- SECTION GAME 3 ENDS -->
 
+        <!-- SECTION PRODUCTS STARTS -->
+            <section class="section-products">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary section-products__heading">Get your RTX Today</h2>
+                </div>
 
+                <!-- PRODUCT 1 -->
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card-1">
+                            <h2 class="heading-secondary card-1__heading">GEFORCE RTX 2080 Ti</h2>
+                            <p class="paragraph card-1__paragraph">Founders Edition</p>
+                            <p class="paragraph card-1__price">$ 1,199.</p>
+                            <a href="#" class="btn-text card-1__button">Pre-Order</a>
+                        </div>
+                    </div>
 
+                    <!-- PRODUCT 2 -->
+                    <div class="col-1-of-3">
+                        <div class="card-2">
+                            <h2 class="heading-secondary card-2__heading">GEFORCE RTX 2080</h2>
+                            <p class="paragraph card-2__paragraph">Founders Edition</p>
+                            <p class="paragraph card-2__price">$ 799.</p>
+                            <a href="#" class="btn-text card-2__button">Pre-Order</a>
+                        </div>
+                    </div>
 
-
-
-
-
-
+                    <!-- PRODUCT 3 -->
+                    <div class="col-1-of-3">
+                            <div class="card-3">
+                                <h2 class="heading-secondary card-3__heading">GEFORCE RTX 2070</h2>
+                                <p class="paragraph card-3__paragraph">Founders Edition</p>
+                                <p class="paragraph card-3__price">$ 599.</p>
+                                <a href="#" class="btn-text card-3__button">Pre-Order</a>
+                            </div>
+                        </div>
+                </div>
+            </section>
+        <!-- SECTION PRODUCTS ENDS -->
     </main>
     <!-- MAIN CONTENT ENDS -->
+
+    <footer class="footer">
+        
+    </footer>
 
     </body>
 
