Changed The Logo and Header Text | Update #10 |

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <!-- HEADER TEXT AND BUTTON SETUP -->
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">Welcome To Tech Hub</span>
-                    <span class="heading-primary--sub">Tech Nowadays</span>
+                    <span class="heading-primary--main">Welcome To Nvidia Hub</span>
+                    <span class="heading-primary--sub">Tech Reinvented</span>
                 </h1>
                 <!-- BUTTON SETUP -->
                 <a href="#" class="btn btn--white btn--animated-1">Explore</a>
