Added Favicon. | Update #11 |

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="resources/css3/icons/icon-font.css">
         <link rel="stylesheet" type="text/css" href="resources/css3/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="resources/images/favicon-1.png">
 
         <!-- TITLE -->
         <title>Nvidia Tech Hub</title>
