Added Fixed Navigation To the bottom of the header. | Update #12 |

--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
         <title>Nvidia Tech Hub</title>
     </head>
     <body>
+
+        <!-- NAVIGATION SETUP STARTS -->
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a class="navigation__anchor" href="#">Home</a></li>
+                    <li class="navigation__item"><a class="navigation__anchor" href="#">Features</a></li>
+                    <li class="navigation__item"><a class="navigation__anchor" href="#">Games</a></li>
+                    <li class="navigation__item"><a class="navigation__anchor" href="#">Products</a></li>
+                    <li class="navigation__item"><a class="navigation__anchor" href="#">Contact</a></li>
+                </ul>
+            </nav>
+        <!-- NAVIGATION SETUP ENDS -->
+
+
+
          <!-- ** HEADER STARTS ** -->
          <header class="header">
             <!-- HEADER LOGO SETUP -->
@@ -216,6 +231,11 @@
 
     </footer>
 
-    </body>
+    <!-- SCRIPTS / CDN's / FILES -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+    <!-- JS FILES -->
+    <script src="resources/js/navigation.js"></script>
+
+    </body>
 </html>
