Adjusted Brightness in Games Section. Added small sub-paragraph beneath the Pre-Order Button in Games Section. | Update #12 |

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 </p>
                 <!-- "PRE-ORDER" BUTTON -->
                 <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
+                <p class="paragraph section-game-1__supp">RTX Supported</p>
             </div>
         </section>
         <!-- SECTION GAME 1 ENDS -->
@@ -167,6 +168,7 @@
                 </p>
                 <!-- "PRE-ORDER" BUTTON -->
                 <a href="#" class="btn-text u-margin-top-medium section-game-1__button">&larr; Pre Order Now</a>
+                <p class="paragraph section-game-2__supp">RTX Supported</p>
             </div>
         </section>
         <!-- SECTION GAME 2 ENDS -->
@@ -181,6 +183,7 @@
                     </p>
                     <!-- "PRE-ORDER" BUTTON -->
                     <a href="#" class="btn-text u-margin-top-medium section-game-1__button">Pre Order Now &rarr;</a>
+                    <p class="paragraph section-game-3__supp">RTX Supported</p>
                 </div>
             </section>
         <!-- SECTION GAME 3 ENDS -->
