Improved Products Section. | Update #13 |

--- a/index.html
+++ b/index.html
@@ -188,45 +188,94 @@
             </section>
         <!-- SECTION GAME 3 ENDS -->
 
-        <!-- SECTION PRODUCTS STARTS -->
+        <!-- SECTION PRODUCTS EXPERIMENTAL STARTS -->
+            <!-- TOURS SECTION STARTS -->
             <section class="section-products">
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary section-products__heading">Get your RTX Today</h2>
-                </div>
+                    <h2 class="heading-secondary">Get Your RTX Today</h2>
+                 </div>
 
-                <!-- PRODUCT 1 -->
-                <div class="row">
+                 <div class="row">
                     <div class="col-1-of-3">
-                        <div class="card-1">
-                            <h2 class="heading-secondary card-1__heading">GEFORCE RTX 2080 Ti</h2>
-                            <p class="paragraph card-1__paragraph">Founders Edition</p>
-                            <p class="paragraph card-1__price">$ 1,199.</p>
-                            <a href="#" class="btn-text card-1__button">Pre-Order</a>
-                        </div>
-                    </div>
-
-                    <!-- PRODUCT 2 -->
-                    <div class="col-1-of-3">
-                        <div class="card-2">
-                            <h2 class="heading-secondary card-2__heading">GEFORCE RTX 2080</h2>
-                            <p class="paragraph card-2__paragraph">Founders Edition</p>
-                            <p class="paragraph card-2__price">$ 799.</p>
-                            <a href="#" class="btn-text card-2__button">Pre-Order</a>
-                        </div>
-                    </div>
-
-                    <!-- PRODUCT 3 -->
-                    <div class="col-1-of-3">
-                            <div class="card-3">
-                                <h2 class="heading-secondary card-3__heading">GEFORCE RTX 2070</h2>
-                                <p class="paragraph card-3__paragraph">Founders Edition</p>
-                                <p class="paragraph card-3__price">$ 599.</p>
-                                <a href="#" class="btn-text card-3__button">Pre-Order</a>
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                    <div class="card__picture card__picture--1">
+                                        &nbsp;
+                                    </div>
+                                    <h4 class="card__heading">
+                                        <span class="card__heading-span card__heading-span--1">GeForce RTX 2080Ti</span>
+                                    </h4>
+                                    <div class="card__details">
+                                        <p class="card__paragraph">Founders Edition</p>
+                                    </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                <!-- CTA = CALL TO ACTION  -->
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-value">$1,199</p>
+                                    </div>
+                                    <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                </div>
                             </div>
                         </div>
-                </div>
+                    </div>
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                    <div class="card__picture card__picture--2">
+                                            &nbsp;
+                                    </div>
+                                    <h4 class="card__heading">
+                                        <span class="card__heading-span card__heading-span--2">GeForce RTX 2080</span>
+                                    </h4>
+                                    <div class="card__details">
+                                       <p class="card__paragraph">Founders Edition</p>
+                                    </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                    <!-- CTA = CALL TO ACTION  -->
+                                    <div class="card__cta">
+                                            <div class="card__price-box">
+                                                <p class="card__price-value">$799</p>
+                                            </div>
+                                            <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                    <div class="card__picture card__picture--3">
+                                        &nbsp;
+                                    </div>
+                                    <h4 class="card__heading">
+                                        <span class="card__heading-span card__heading-span--3">GeForce RTX 2070</span>
+                                    </h4>
+                                    <div class="card__details">
+                                        <p class="card__paragraph">Founders Edition</p>
+                                    </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                    <!-- CTA = CALL TO ACTION  -->
+                                    <div class="card__cta">
+                                            <div class="card__price-box">
+                                                <p class="card__price-value">$599</p>
+                                            </div>
+                                            <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="u-center-text u-margin-top-huge">
+                        <a href="#" class="btn btn--green">More</a>
+                    </div>
             </section>
-        <!-- SECTION PRODUCTS ENDS -->
+        <!-- SECTION PRODUCTS EXPERIMENTAL ENDS -->
     </main>
     <!-- MAIN CONTENT ENDS -->
 
