Minor changes/improvements. | Update #15 |

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                     <div class="card__details">
                                         <p class="card__paragraph">Founders Edition</p>
                                         <ul>
-                                            <li>GPU architecture: Turing</li>
+                                            <li>GPU Architecture: Turing</li>
                                             <li>RTX-OPS: 78T</li>
                                             <li>Boost Clock: 1635MHz (OC)</li>
                                             <li>Frame Buffer: 11GB DDR6</li>
@@ -242,7 +242,7 @@
                                     <div class="card__details">
                                        <p class="card__paragraph">Founders Edition</p>
                                        <ul>
-                                        <li>GPU architecture: Turing</li>
+                                        <li>GPU Architecture: Turing</li>
                                         <li>RTX-OPS: 60T</li>
                                         <li>Boost Clock: 1800MHz (OC)</li>
                                         <li>Frame Buffer: 8GB DDR6</li>
@@ -275,7 +275,7 @@
                                     <div class="card__details">
                                         <p class="card__paragraph">Founders Edition</p>
                                         <ul>
-                                            <li>GPU architecture: Turing</li>
+                                            <li>GPU Architecture: Turing</li>
                                             <li>RTX-OPS: 45T</li>
                                             <li>Boost Clock: 1710MHz (OC)</li>
                                             <li>Frame Buffer: 8GB DDR6</li>
